--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,6 +22,35 @@
     background: #222221;
  }
 
+ .navbar .navbar-nav .nav-item.active .nav-link {
+  color: #e6c462;
+}
+
+.navbar .navbar-nav .nav-item:hover .nav-link {
+  color: #e6c462;
+  /* border-bottom: 2px solid #0c6e0c; */
+}
+
+ .btn-bus {
+  color: white;
+  border: 1px solid #106810;
+  text-transform: uppercase;
+  border-radius: 0px;
+  font-size: 15px;
+  font-weight: 500;
+  background-color: #106810;
+  font-family: 'Poppins', sans-serif;
+  padding: 9px 20px;
+  transition:all 0.8s, color 0.3s 0.3s;
+} 
+
+.btn-bus:hover {
+  color: #106810 !important;
+  background: white !important;
+  box-shadow:300px 0 0 0 white inset;
+  border: 1px solid white !important;
+}
+
 }
 
 @media (max-width:767px) {
@@ -41,4 +70,8 @@
         bottom:20px;
         left:20px;
      }
+
+     .last-service {
+    padding: 40px 5px !important;
+}
 }
