--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,5 +73,10 @@
 
      .last-service {
     padding: 40px 5px !important;
-}
+    }
+
+    .team-content.with-mt {
+      margin-top: 30px;
+    }
+
 }
